--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/final2
+spring.datasource.url=us-cdbr-iron-east-04.cleardb.net/heroku_2cfa3f713f55e5d
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.username=root
-spring.datasource.password=220889
+spring.datasource.username=bdfc0f56b11907
+spring.datasource.password=a3856092
 spring.datasource.driver-class-name=org.gjt.mm.mysql.Driver
 
 spring.liquibase.change-log=classpath:liquibase/master.xml
